add content to nav bar

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- https://www.figma.com/file/gg6VgARzLt6GFvHvMenJFH/Responsive-Web-Page-%F0%9F%8E%89-(Community)?node-id=1%3A2&t=XrxGEGJAJFuYWiRH-0 -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,5 +15,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="#" class="nav__link">Çözüm ve Hizmetler</a>
+        <a href="#" class="nav__link">Ürünler</a>
+        <a href="#" class="nav__link">Teknolojiler</a>
+        <a href="#" class="nav__link">İnsan Kaynakları</a>
+        <a href="#" class="nav__link">Kurumsal</a>
+        <a href="#" class="nav__button">İletişim</a>
+      </nav>
+    </header>
+    <article></article>
+    <footer></footer>
+  </body>
 </html>
