add layout to nav bar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#" class="nav__link">Teknolojiler</a>
         <a href="#" class="nav__link">İnsan Kaynakları</a>
         <a href="#" class="nav__link">Kurumsal</a>
-        <a href="#" class="nav__button">İletişim</a>
+        <a href="#" class="nav__link button">İletişim</a>
       </nav>
     </header>
     <article></article>
