--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <a href="#" class="nav__link">Kurumsal</a>
         <a href="#" class="nav__link button">İletişim</a>
       </nav>
+      <p class="header__intro">Bilgi Teknolojilerinde 23 Yıllık Tecrübe</p>
+      <p class="header__description">
+        Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için farklı
+        sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje Yönetimi, İş
+        Analizi ve Test Yönetimi hizmetleri sunmaktayız.
+      </p>
     </header>
     <article></article>
     <footer></footer>
