add layout to input form and button inside

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje Yönetimi, İş
         Analizi ve Test Yönetimi hizmetleri sunmaktayız.
       </p>
+      <form action="#">
+        <input
+          class="header__input"
+          type="text"
+          name="text"
+          id="text"
+          placeholder="Mail bültenimize kayıt ol"
+        />
+        <button class="header__input--button button">Kayıt Ol</button>
+      </form>
     </header>
     <article></article>
     <footer></footer>
