add content to article title and desc

--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
         <button class="header__input--button button">Kayıt Ol</button>
       </form>
     </header>
-    <article></article>
+    <article>
+      <div class="article__introduction">
+        <p class="article__introduction--title">Kalite ve Süreç Yönetimi</p>
+        <p class="article__introduction--description">
+          Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için
+          farklı sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje
+          Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.
+        </p>
+      </div>
+    </article>
     <footer></footer>
   </body>
 </html>
