add layout and content to section 1

--- a/index.html
+++ b/index.html
@@ -43,14 +43,66 @@
       </form>
     </header>
     <article>
-      <div class="article__introduction">
-        <p class="article__introduction--title">Kalite ve Süreç Yönetimi</p>
-        <p class="article__introduction--description">
-          Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için
-          farklı sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje
-          Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.
-        </p>
-      </div>
+      <section class="section__1">
+        <div class="article__introduction">
+          <p class="article__introduction--title">Kalite ve Süreç Yönetimi</p>
+          <p class="article__introduction--description">
+            Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için
+            farklı sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje
+            Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.
+          </p>
+        </div>
+        <div class="article__detail">
+          <div class="article__detail--box">
+            <img src="./img/File.svg" alt="A file icon" />
+            <p class="box--header">Döküman Analizi</p>
+            <p class="box-description">
+              Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
+              amet, elementum.
+            </p>
+          </div>
+          <div class="article__detail--box">
+            <img src="./img/Star.svg" alt="A star icon" />
+            <p class="box--header">Kabul ve Değerlendirme</p>
+            <p class="box-description">
+              Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
+              amet, elementum.
+            </p>
+          </div>
+          <div class="article__detail--box">
+            <img src="./img/Crown.svg" alt="A crown icon" />
+            <p class="box--header">İş Kuralları Analizi</p>
+            <p class="box-description">
+              Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
+              amet, elementum.
+            </p>
+          </div>
+          <div class="article__detail--box">
+            <img src="./img/ChartBar.svg" alt="A chartbar icon" />
+            <p class="box--header">Akış Diyagramları</p>
+            <p class="box-description">
+              Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
+              amet, elementum.
+            </p>
+          </div>
+          <div class="article__detail--box">
+            <img src="./img/ChartPieSlice.svg" alt="A chartpie icon" />
+            <p class="box--header">Paydaş Analizi</p>
+            <p class="box-description">
+              Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
+              amet, elementum.
+            </p>
+          </div>
+          <div class="article__detail--box">
+            <img src="./img/FigmaLogo.svg" alt="A figma icon" />
+            <p class="box--header">Prototipleme</p>
+            <p class="box-description">
+              Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
+              amet, elementum.
+            </p>
+          </div>
+        </div>
+      </section>
     </article>
     <footer></footer>
   </body>
