--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="article__detail--box">
             <img src="./img/File.svg" alt="A file icon" />
             <p class="box--header">Döküman Analizi</p>
-            <p class="box-description">
+            <p class="box--description">
               Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
               amet, elementum.
             </p>
@@ -64,7 +64,7 @@
           <div class="article__detail--box">
             <img src="./img/Star.svg" alt="A star icon" />
             <p class="box--header">Kabul ve Değerlendirme</p>
-            <p class="box-description">
+            <p class="box--description">
               Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
               amet, elementum.
             </p>
@@ -72,7 +72,7 @@
           <div class="article__detail--box">
             <img src="./img/Crown.svg" alt="A crown icon" />
             <p class="box--header">İş Kuralları Analizi</p>
-            <p class="box-description">
+            <p class="box--description">
               Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
               amet, elementum.
             </p>
@@ -80,7 +80,7 @@
           <div class="article__detail--box">
             <img src="./img/ChartBar.svg" alt="A chartbar icon" />
             <p class="box--header">Akış Diyagramları</p>
-            <p class="box-description">
+            <p class="box--description">
               Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
               amet, elementum.
             </p>
@@ -88,7 +88,7 @@
           <div class="article__detail--box">
             <img src="./img/ChartPieSlice.svg" alt="A chartpie icon" />
             <p class="box--header">Paydaş Analizi</p>
-            <p class="box-description">
+            <p class="box--description">
               Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
               amet, elementum.
             </p>
@@ -96,7 +96,7 @@
           <div class="article__detail--box">
             <img src="./img/FigmaLogo.svg" alt="A figma icon" />
             <p class="box--header">Prototipleme</p>
-            <p class="box-description">
+            <p class="box--description">
               Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus
               amet, elementum.
             </p>
