--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
           </div>
         </div>
       </section>
+      <section class="section__2">
+        <p class="section__2__header">Test Yönetimiyle Neler Sağlıyoruz?</p>
+        <p class="section__2__description">IoT Destekli Çözümler</p>
+        <div class="section__2__box">
+          <p>Yazılım Kalitesini Arttırıyoruz</p>
+          <img src="./img/CaretCircleDoubleRight.svg" />
+          <p>Olası Hataları Önceden Belirliyoruz</p>
+          <img src="./img/CaretCircleDoubleRight.svg" />
+          <p>Oluşabilecek Riskleri Önlüyoruz</p>
+          <img src="./img/CaretCircleDoubleRight.svg" />
+          <p>Zaman ve Maliyetten Tasarruf Sağlıyoruz</p>
+        </div>
+      </section>
     </article>
     <footer></footer>
   </body>
