fix layout to landing page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
       </section>
-      <section class="section__2">
+      <!-- <section class="section__2">
         <p class="section__2__header">Test Yönetimiyle Neler Sağlıyoruz?</p>
         <p class="section__2__description">IoT Destekli Çözümler</p>
         <div class="section__2__box">
@@ -115,7 +115,7 @@
           <img src="./img/CaretCircleDoubleRight.svg" />
           <p>Zaman ve Maliyetten Tasarruf Sağlıyoruz</p>
         </div>
-      </section>
+      </section> -->
     </article>
     <footer></footer>
   </body>
