--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         <p class="section__2__header">Test Yönetimiyle Neler Sağlıyoruz?</p>
         <p class="section__2__description">IoT Destekli Çözümler</p>
         <div class="section__2__box">
-          <p>Yazılım Kalitesini Arttırıyoruz</p>
+          <p class="--p1">Yazılım Kalitesini Arttırıyoruz</p>
           <img src="./img/CaretCircleDoubleRight.svg" />
-          <p>Olası Hataları Önceden Belirliyoruz</p>
+          <p class="--p2">Olası Hataları Önceden Belirliyoruz</p>
           <img src="./img/CaretCircleDoubleRight.svg" />
-          <p>Oluşabilecek Riskleri Önlüyoruz</p>
+          <p class="--p3">Oluşabilecek Riskleri Önlüyoruz</p>
           <img src="./img/CaretCircleDoubleRight.svg" />
           <p class="--p4">Zaman ve Maliyetten Tasarruf Sağlıyoruz</p>
         </div>
