--- a/index.html
+++ b/index.html
@@ -116,6 +116,41 @@
           <p class="--p4">Zaman ve Maliyetten Tasarruf Sağlıyoruz</p>
         </div>
       </section>
+      <section class="section__3">
+        <div class="section__3__blog1">
+          <div class="blog-container">
+            <p class="section__3__blog1--title">Kalite ve Süreç Yönetimi</p>
+            <p class="section__3__blog1--description">
+              Deneyimli kadromuz; birçok farklı sektörden deneyimli, PMP®
+              sertifikasına sahip, uzman proje yöneticilerinden oluşmaktadır.
+              Projelerinizin yönetimine destek olmak, zayıf olduğunu
+              düşündüğünüz alanları güçlendirmek, uluslararası geçerliliği olan
+              PMI® metodolojisini şirketinizde uygulamak ve geliştirmek için
+              yanınızdayız.
+            </p>
+            <button>Keşfet</button>
+            <img
+              src="./img/Illustration.png"
+              alt="A man is presentating in front of some people"
+            />
+          </div>
+        </div>
+        <div class="section__3__blog2">
+          <img src="./img/Illustration 2.png" alt="A man before computer" />
+          <div class="blog-container">
+            <p class="section__3__blog2--title">Test Yönetimi ve Analizi</p>
+            <p class="section__3__blog2--description">
+              Danışmanlığını yürüttüğümüz projelerde yazılım hatalarını önlemek
+              amacıyla gerçekleştirdiğimiz testleri her proje aşamasında manuel
+              ya da test otomasyonu ile dikkatle uygulamaktayız. Deneyimli test
+              ekibimiz, kurumlara yüksek kalitede yazılım testleri hizmeti ile
+              baştan sona güvenli, kaliteli ve tatmin edici bir müşteri deneyimi
+              sunmaktadır.
+            </p>
+            <button>Keşfet</button>
+          </div>
+        </div>
+      </section>
     </article>
     <footer></footer>
   </body>
