add typegraphy for section 3

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
       <section class="section__3">
         <div class="section__3__blog1">
           <div class="blog-container">
-            <p class="section__3__blog1--title">Kalite ve Süreç Yönetimi</p>
-            <p class="section__3__blog1--description">
+            <p class="section__3__blog1--title blog-title">
+              Kalite ve Süreç Yönetimi
+            </p>
+            <p class="section__3__blog1--description blog-description">
               Deneyimli kadromuz; birçok farklı sektörden deneyimli, PMP®
               sertifikasına sahip, uzman proje yöneticilerinden oluşmaktadır.
               Projelerinizin yönetimine destek olmak, zayıf olduğunu
@@ -138,8 +140,10 @@
         <div class="section__3__blog2">
           <img src="./img/Illustration 2.png" alt="A man before computer" />
           <div class="blog-container">
-            <p class="section__3__blog2--title">Test Yönetimi ve Analizi</p>
-            <p class="section__3__blog2--description">
+            <p class="section__3__blog2--title blog-title">
+              Test Yönetimi ve Analizi
+            </p>
+            <p class="section__3__blog2--description blog-description">
               Danışmanlığını yürüttüğümüz projelerde yazılım hatalarını önlemek
               amacıyla gerçekleştirdiğimiz testleri her proje aşamasında manuel
               ya da test otomasyonu ile dikkatle uygulamaktayız. Deneyimli test
