--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
           </div>
         </div>
       </section>
+      <section class="section__4"></section>
     </article>
     <footer></footer>
   </body>
