add content to section 4

--- a/index.html
+++ b/index.html
@@ -155,7 +155,13 @@
           </div>
         </div>
       </section>
-      <section class="section__4"></section>
+      <section class="section__4">
+        <p class="section__4__title">Referanslarımız</p>
+        <p class="section__4__description">
+          Bize güvenen ve beraber çalıştığımız iş ortaklarımız
+        </p>
+        <div class="logo-container"></div>
+      </section>
     </article>
     <footer></footer>
   </body>
