add picture to box

--- a/index.html
+++ b/index.html
@@ -160,7 +160,27 @@
         <p class="section__4__description">
           Bize güvenen ve beraber çalıştığımız iş ortaklarımız
         </p>
-        <div class="logo-container"></div>
+        <div class="logo-container">
+          <div class="column column__1">
+            <img src="./img/Airbnb Logo.png" alt="" />
+          </div>
+          <div class="column column__2">
+            <img src="./img/Google Logo.png" alt="" />
+            <img src="./img/BookMyShow Logo.png" alt="" />
+          </div>
+          <div class="column column__3">
+            <img src="./img/Microsoft Logo.png" alt="" />
+            <img src="./img/FedEx Logo.png" alt="" />
+            <img src="./img/Walmart Logo.png" alt="" />
+          </div>
+          <div class="column column__4">
+            <img src="./img/OYO Logo.png" alt="" />
+            <img src="./img/OLA Logo.png" alt="" />
+          </div>
+          <div class="column column__5">
+            <img src="./img/Amazon Logo.png" alt="" />
+          </div>
+        </div>
       </section>
     </article>
     <footer></footer>
