add content to section 5

--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
           </div>
         </div>
       </section>
+      <section class="section__5">
+        <div class="section__5--logo">
+          <img src="./img/Users.svg" alt="" />
+          <div class="ellipse"></div>
+        </div>
+        <p class="section__5--title">Bize Ulaşın</p>
+        <p class="section__5--description">
+          Çözüm, hizmet ve ürünlerimiz hakkında detaylı bilgi için bizimle
+          irtibata geçin.
+        </p>
+        <button>Bize Ulaşın</button>
+      </section>
     </article>
     <footer></footer>
   </body>
