add content to footer

--- a/index.html
+++ b/index.html
@@ -195,6 +195,45 @@
         <button>Bize Ulaşın</button>
       </section>
     </article>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="footer__col">
+          <p class="footer__col--title">Çözüm ve Hizmetler</p>
+          <p class="footer__col--content">Yazılım Geliştirme</p>
+          <p class="footer__col--content">Outsourcing</p>
+          <p class="footer__col--content">Kalite ve Süreç Yönetimi</p>
+          <p class="footer__col--content">Danışmanlık</p>
+          <p class="footer__col--content">IoT Destekli Çözümler</p>
+        </div>
+        <div class="footer__col">
+          <p class="footer__col--title">Ürünler</p>
+          <p class="footer__col--content">Eğitim Yönetim Sistemi</p>
+          <p class="footer__col--content">İnsan Sermayesi Yönetim Sistemi</p>
+          <p class="footer__col--content">Müşteri İlişkileri Yönetim Sistemi</p>
+          <p class="footer__col--content">İçerik Yönetim Sistemi</p>
+        </div>
+        <div class="footer__col">
+          <p class="footer__col--title">Ürünler</p>
+          <p class="footer__col--content">Hakkımızda</p>
+          <p class="footer__col--content">Belge ve Yetkinlikler</p>
+          <p class="footer__col--content">İş Ortakları</p>
+        </div>
+        <div class="footer__col">
+          <p class="footer__col--title">Kurumsal</p>
+          <p class="footer__col--content">Bilgi İstek Formu</p>
+          <p class="footer__col--content">Uzman Talep Formu</p>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <p>© Copyright 2010-2021 - Can Çevik</p>
+        <div>
+          <img src="./img/MediumLogo.svg" alt="" />
+          <img src="./img/LinkedinLogo.svg" alt="" />
+          <img src="./img/TwitterLogo.svg" alt="" />
+          <img src="./img/InstagramLogo.svg" alt="" />
+          <img src="./img/FacebookLogo.svg" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
