fix layout to icon footer

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <img src="./img/LinkedinLogo.svg" alt="" />
           <img src="./img/TwitterLogo.svg" alt="" />
           <img src="./img/InstagramLogo.svg" alt="" />
-          <img src="./img/FacebookLogo.svg" alt="" />
+          <img class="fb-icon" src="./img/FacebookLogo.svg" alt="" />
         </div>
       </div>
     </footer>
