--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </form>
     </header>
     <article>
-      <section class="section__1">
+      <section class="section1">
         <div class="article__introduction">
           <p class="article__introduction--title">Kalite ve Süreç Yönetimi</p>
           <p class="article__introduction--description">
@@ -103,10 +103,10 @@
           </div>
         </div>
       </section>
-      <section class="section__2">
-        <p class="section__2__header">Test Yönetimiyle Neler Sağlıyoruz?</p>
-        <p class="section__2__description">IoT Destekli Çözümler</p>
-        <div class="section__2__box">
+      <section class="section2">
+        <p class="section2__header">Test Yönetimiyle Neler Sağlıyoruz?</p>
+        <p class="section2__description">IoT Destekli Çözümler</p>
+        <div class="section2__box">
           <p class="--p1">Yazılım Kalitesini Arttırıyoruz</p>
           <img src="./img/CaretCircleDoubleRight.svg" />
           <p class="--p2">Olası Hataları Önceden Belirliyoruz</p>
@@ -116,13 +116,13 @@
           <p class="--p4">Zaman ve Maliyetten Tasarruf Sağlıyoruz</p>
         </div>
       </section>
-      <section class="section__3">
-        <div class="section__3__blog1">
+      <section class="section3">
+        <div class="section3__blog1">
           <div class="blog-container">
-            <p class="section__3__blog1--title blog-title">
+            <p class="section3__blog1--title blog-title">
               Kalite ve Süreç Yönetimi
             </p>
-            <p class="section__3__blog1--description blog-description">
+            <p class="section3__blog1--description blog-description">
               Deneyimli kadromuz; birçok farklı sektörden deneyimli, PMP®
               sertifikasına sahip, uzman proje yöneticilerinden oluşmaktadır.
               Projelerinizin yönetimine destek olmak, zayıf olduğunu
@@ -137,13 +137,13 @@
             alt="A man is presentating in front of some people"
           />
         </div>
-        <div class="section__3__blog2">
+        <div class="section3__blog2">
           <img src="./img/Illustration 2.png" alt="A man before computer" />
           <div class="blog-container">
-            <p class="section__3__blog2--title blog-title">
+            <p class="section3__blog2--title blog-title">
               Test Yönetimi ve Analizi
             </p>
-            <p class="section__3__blog2--description blog-description">
+            <p class="section3__blog2--description blog-description">
               Danışmanlığını yürüttüğümüz projelerde yazılım hatalarını önlemek
               amacıyla gerçekleştirdiğimiz testleri her proje aşamasında manuel
               ya da test otomasyonu ile dikkatle uygulamaktayız. Deneyimli test
@@ -155,9 +155,9 @@
           </div>
         </div>
       </section>
-      <section class="section__4">
-        <p class="section__4__title">Referanslarımız</p>
-        <p class="section__4__description">
+      <section class="section4">
+        <p class="section4__title">Referanslarımız</p>
+        <p class="section4__description">
           Bize güvenen ve beraber çalıştığımız iş ortaklarımız
         </p>
         <div class="logo-container">
@@ -182,13 +182,13 @@
           </div>
         </div>
       </section>
-      <section class="section__5">
-        <div class="section__5--logo">
+      <section class="section5">
+        <div class="section5--logo">
           <img src="./img/Users.svg" alt="" />
           <div class="ellipse"></div>
         </div>
-        <p class="section__5--title">Bize Ulaşın</p>
-        <p class="section__5--description">
+        <p class="section5--title">Bize Ulaşın</p>
+        <p class="section5--description">
           Çözüm, hizmet ve ürünlerimiz hakkında detaylı bilgi için bizimle
           irtibata geçin.
         </p>
