add ellipse to layout

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
       <section class="section5">
         <div class="section5--logo">
           <img src="./img/Users.svg" alt="" />
-          <div class="ellipse"></div>
+          <div class="ellipse">
+            <img src="./img/Ellipse 5.svg" alt="" />
+          </div>
         </div>
         <p class="section5--title">Bize Ulaşın</p>
         <p class="section5--description">
