fix layout of section 3

--- a/index.html
+++ b/index.html
@@ -141,7 +141,16 @@
           />
         </div>
         <div class="section3__blog2">
-          <img src="./img/Illustration 2.png" alt="A man before computer" />
+          <img
+            class="section3__blog2--img1440"
+            src="./img/Illustration 2.png"
+            alt="A man before computer"
+          />
+          <img
+            class="section3__blog2--img1024"
+            src="./img/Illustration3.png"
+            alt="A macbook"
+          />
           <div class="blog-container">
             <p class="section3__blog2--title blog-title">
               Test Yönetimi ve Analizi
