--- a/index.html
+++ b/index.html
@@ -140,16 +140,11 @@
             alt="A man is presentating in front of some people"
           />
         </div>
-        <div class="section3__blog2">
+        <div class="section3__blog2 display1440">
           <img
             class="section3__blog2--img1440"
             src="./img/Illustration 2.png"
             alt="A man before computer"
-          />
-          <img
-            class="section3__blog2--img1024"
-            src="./img/Illustration3.png"
-            alt="A macbook"
           />
           <div class="blog-container">
             <p class="section3__blog2--title blog-title">
@@ -162,6 +157,27 @@
               ekibimiz, kurumlara yüksek kalitede yazılım testleri hizmeti ile
               baştan sona güvenli, kaliteli ve tatmin edici bir müşteri deneyimi
               sunmaktadır.
+            </p>
+            <button>Keşfet</button>
+          </div>
+        </div>
+        <div class="section3__blog2 display1024">
+          <img
+            class="section3__blog2--img1024"
+            src="./img/Illustration3.png"
+            alt="A macbook"
+          />
+          <div class="blog-container">
+            <p class="section3__blog2--title blog-title">
+              Kalite ve Süreç Yönetimi
+            </p>
+            <p class="section3__blog2--description blog-description">
+              Deneyimli kadromuz; birçok farklı sektörden deneyimli, PMP®
+              sertifikasına sahip, uzman proje yöneticilerinden oluşmaktadır.
+              Projelerinizin yönetimine destek olmak, zayıf olduğunu
+              düşündüğünüz alanları güçlendirmek, uluslararası geçerliliği olan
+              PMI® metodolojisini şirketinizde uygulamak ve geliştirmek için
+              yanınızdayız.
             </p>
             <button>Keşfet</button>
           </div>
