--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
           <p class="footer__col--content">İçerik Yönetim Sistemi</p>
         </div>
         <div class="footer__col">
-          <p class="footer__col--title">Ürünler</p>
+          <p class="footer__col--title">Kurumsal</p>
           <p class="footer__col--content">Hakkımızda</p>
           <p class="footer__col--content">Belge ve Yetkinlikler</p>
           <p class="footer__col--content">İş Ortakları</p>
         </div>
         <div class="footer__col">
-          <p class="footer__col--title">Kurumsal</p>
+          <p class="footer__col--title">İletişim</p>
           <p class="footer__col--content">Bilgi İstek Formu</p>
           <p class="footer__col--content">Uzman Talep Formu</p>
         </div>
