responsive mobile section 2

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </p>
         </div>
         <div class="article__detail">
-          <div class="article__detail--box">
+          <div class="article__detail--box file-icon-box">
             <img src="./img/File.svg" alt="A file icon" />
             <p class="box--header">Döküman Analizi</p>
             <p class="box--description">
