fix bug layout section article

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </section>
       <section class="section3">
-        <div class="section3__blog1">
+        <div class="section3__blog1 display10241044">
           <div class="blog-container">
             <p class="section3__blog1--title blog-title">
               Kalite ve Süreç Yönetimi
@@ -139,6 +139,26 @@
             src="./img/Illustration.png"
             alt="A man is presentating in front of some people"
           />
+        </div>
+        <div class="section3__blog1 display375">
+          <img
+            src="./img/Illustration.png"
+            alt="A man is presentating in front of some people"
+          />
+          <div class="blog-container">
+            <p class="section3__blog1--title blog-title">
+              Kalite ve Süreç Yönetimi
+            </p>
+            <p class="section3__blog1--description blog-description">
+              Deneyimli kadromuz; birçok farklı sektörden deneyimli, PMP®
+              sertifikasına sahip, uzman proje yöneticilerinden oluşmaktadır.
+              Projelerinizin yönetimine destek olmak, zayıf olduğunu
+              düşündüğünüz alanları güçlendirmek, uluslararası geçerliliği olan
+              PMI® metodolojisini şirketinizde uygulamak ve geliştirmek için
+              yanınızdayız.
+            </p>
+            <button>Keşfet</button>
+          </div>
         </div>
         <div class="section3__blog2 display1440">
           <img
