--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   <body>
     <header>
       <nav>
+        <img
+          class="list-img"
+          src="./img/List.svg"
+          width="32px"
+          height="32px"
+          style="display: none"
+        />
         <a href="#" class="nav__link">Çözüm ve Hizmetler</a>
         <a href="#" class="nav__link">Ürünler</a>
         <a href="#" class="nav__link">Teknolojiler</a>
